# IFB398-T07-MINDS-

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  seed-db.py  settings.py  urls.py
config/: settings.py  urls.py
core/: admin.py  apps.py  forms.py  instrument.py  models.py  permissions.py  tagging.py  telemetry.py  urls.py  utils.py  views.py
core/ai/: granite_client.py  report_service.py  retrieval.py
core/migrations/: 0001_initial.py  0002_alter_document_created_at_alter_document_tags_and_more.py  0006_document_extracted_text.py  (+16 more)
docs/: _Project_Overview.txt
documents/: models.py
fixtures/: example_data.json  generated_no_docs.json  generated_with_docs.json  initial_data.json  seed_data.json  testing_data.json
src/: manage.py  package.json  pyproject.toml  vite.config.mjs
src/assets/: manifest.json
src/assets/django-assets/: mainJs-0z9lrA7k.js  mainJs-DlR8AGKS.css
src/config/: settings.py  urls.py
src/core/: context_processors.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/infra/web/: Dockerfile
src/orefox_kms/: asgi.py  settings.py  urls.py  wsgi.py
src/search/: forms.py  models.py  views.py
src/search/migrations/: 0001_initial.py
src/static/js/: main.js
src/templates/: base.html
src/templates/core/: profile.html  upload.html
src/templates/navigation/: layout.html
src/templates/navigation/topbar/: topbar.html
src/templates/ollama/: base.html  index.html  message.html
src/templates/partial/: home_content.html  profile_content.html
templates/: base.html
(+57 files in other folders)
