[project]
requires-python = ">=3.10"
name = "Orefox-KMS"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "django-htmx>=1.26.0",
    "django-storages>=1.14.6",
    "django-tailwind[reload]>=4.2.0",
    "pillow>=11.3.0",
    "pip>=25.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "typing>=3.10.0.0",
    "wheel>=0.45.1",
]
